# bayesian_factor

./: .gitignore  README.md  pyproject.toml  test_ghonson.ipynb
notebooks/: Orthonormal_sampling.ipynb  Replicate_results.ipynb  basic_gibbs_sampler.ipynb
src/experiments/: ma_liu_figure_1.py  ma_liu_figure_2.py  ma_liu_figure_3.py  random_small_n_large_s_B.py
src/sampling/: SpSlNormalBayesianFactorGibbs.py  fast_sparse_normal_factor_gibbs.py  ghosh_dunson.py  map_estimation.py  metropolis_hastings.py  normal_factor_gibbs.py  orthonormal_factor_gibbs.py  sparse_factor_gibbs.py  sparse_normal_bayesian_factor_gibbs.py  sparse_normal_factor_gibbs.py  torch_gpu_normal_factor_gibbs.py
src/simulations/: normal_bayesian_factor_dgp.py
src/utils/probability/: density.py
src/utils/setup/: create_true_loadings.py  orthonormal_setup.py
tests/sampling/: test_sp_sl_normal_bayesian_factor_gibbs.py
